Set flush after pvcapid.service
This may or may not help, but should in theory prevent the flush from
trying to run after a (locally-running) API daemon is terminated, which
could cause an API failure and a failure to flush.

--- a/node-daemon/pvc-flush.service
+++ b/node-daemon/pvc-flush.service
@@ -2,7 +2,7 @@
 
 [Unit]
 Description = Parallel Virtual Cluster autoflush daemon
-After = pvcnoded.service
+After = pvcnoded.service pvcapid.service
 Wants = pvcnoded.service
 PartOf = pvc.target
 
