--- a/node-daemon/pvcnoded.sample.yaml
+++ b/node-daemon/pvcnoded.sample.yaml
@@ -86,12 +86,12 @@ pvc:
         host: localhost
         # port: PostgreSQL port, invariably 'localhost'
         port: 5432
-        # name: PostgreSQL database name, invariably 'pvcprov'
-        name: pvcprov
-        # user: PostgreSQL username, invariable 'pvcprov'
-        user: pvcprov
+        # name: PostgreSQL database name, invariably 'pvcapi'
+        name: pvcapi
+        # user: PostgreSQL username, invariable 'pvcapi'
+        user: pvcapi
         # pass: PostgreSQL user password, randomly generated
-        pass: pvcprov
+        pass: pvcapi
   # system: Local PVC instance configuration
   system:
     # intervals: Intervals for keepalives and fencing
