Standardize package building
1. Only build on GitLab when there's a tag.
2. Add the packages on GitLab to component "pvc" in the repo.
3. Add build-unstable-deb.sh script to build git-versioned packages.
4. Revamp build-and-deploy to use build-unstable-deb.sh and cut down on
   output.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,14 @@ stages:
    - build
    - deploy
 
-build:
+build_releases:
   stage: build
   before_script: 
     - git submodule update --init
   script:
     - /bin/bash build-deb.sh
-    - /usr/local/bin/deploy-package
+    - /usr/local/bin/deploy-package -C pvc
   only:
-    - master
+    - tags
+  except:
+    - branches
