--- a/.bbuilder-tasks.yaml
+++ b/.bbuilder-tasks.yaml
@@ -4,4 +4,4 @@ bbuilder:
     published:
       - git submodule update --init
       - /bin/bash build-stable-deb.sh
-      - /usr/local/bin/deploy-package -C pvc
+      - sudo /usr/local/bin/deploy-package -C pvc
