--- a/node-daemon/pvcnoded.sample.yaml
+++ b/node-daemon/pvcnoded.sample.yaml
@@ -152,8 +152,8 @@ pvc:
         log_keepalives: True
         # log_keepalive_cluster_details: Enable or disable node status logging during keepalive
         log_keepalive_cluster_details: True
-        # log_keepalive_storage_details: Enable or disable node storage logging during keepalive
-        log_keepalive_storage_details: True
+        # log_keepalive_plugin_details: Enable or disable node health plugin logging during keepalive
+        log_keepalive_plugin_details: True
         # console_log_lines: Number of console log lines to store in Zookeeper per VM
         console_log_lines: 1000
         # node_log_lines: Number of node log lines to store in Zookeeper per node
