Reorganize and add more configuration items

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -6,6 +6,28 @@
 #
 # This file will normally be written by the PVC Ansible framework; this example is provided for reference
 
+# Paths configuration
+path:
+
+  # Node Static IP file
+  # Contains the last octet IP address of this node for use if node_ip_selection is "static" for any network
+  node_ip_file: "/etc/pvc/ipaddr"
+
+  # Plugin directory
+  plugin_directory: "/usr/share/pvc/plugins"
+
+  # Dynamic directory
+  dynamic_directory: "/run/pvc"
+
+  # System log directory
+  system_log_directory: "/var/log/pvc"
+
+  # VM Console log directory (set by Libvirt)
+  console_log_directory: "/var/log/libvirt"
+
+  # Ceph configuration directory (set by Ceph/Ansible)
+  ceph_directory: "/etc/ceph"
+
 # Cluster configuration
 cluster:
 
@@ -145,7 +167,10 @@ database:
     credentials:
     
       # API database
-      pvcapi:
+      api:
+
+        # Database name
+        database: pvcapi
 
         # Username
         username: pvcapi
@@ -154,8 +179,11 @@ database:
         password: pvcapiPassw0rd
 
       # DNS database
-      pvcdns:
+      dns:
       
+        # Database name
+        database: pvcdns
+
         # Username
         username: pvcdns
 
@@ -198,37 +226,24 @@ fencing:
     # Failed fence action ("migrate" or "none")
     failed_fence: none
 
+  # IPMI details
+  ipmi:
+
+    # Hostname format, using a "{node_id}" entry
+    hostname_format: "pvchv{node_id}-lom.mydomain.tld"
+
+    # IPMI username
+    username: admin
+
+    # IPMI password
+    password: S3cur3IPMIP4ssw0rd
+
+
 # VM migration configuration
 migration:
 
   # Target selection default value (mem, memprov, load, vcpus, vms)
   target_selector: mem
-
-# Paths configuration
-path:
-
-  # Node name file
-  # Contains the (short) hostname of this particular node
-  node_name_file: "/etc/pvc/node"
-
-  # Node Static IP file
-  # Contains the last octet IP address of this node for use if node_ip_selection is "static" for any network
-  node_ip_file: "/etc/pvc/ipaddr"
-
-  # Plugin directory
-  plugin_directory: "/usr/share/pvc/plugins"
-
-  # Dynamic directory
-  dynamic_directory: "/run/pvc"
-
-  # System log directory
-  system_log_directory: "/var/log/pvc"
-
-  # VM Console log directory (set by Libvirt)
-  console_log_directory: "/var/log/libvirt"
-
-  # Ceph configuration directory (set by Ceph/Ansible)
-  ceph_directory: "/etc/ceph"
 
 # Logging configuration
 logging:
@@ -256,6 +271,9 @@ logging:
 
   # Enable or disable cluster detail logging during keepalive events
   log_cluster_details: yes
+
+  # Enable or disable monitoring detail logging during keepalive events
+  log_monitoring_details: yes
 
   # Number of VM console log lines to store in Zookeeper (per VM)
   console_log_lines: 1000
@@ -285,10 +303,16 @@ guest_networking:
       mtu: 9000
 
       # Number of VFs on this device
-      vfcount: 9
+      vfcount: 4
 
 # Ceph configuration
 ceph:
+
+  # Main config file name
+  ceph_config_file: "ceph.conf"
+
+  # Admin keyring file name
+  ceph_keyring_file: "ceph.client.admin.keyring"
 
   # Monitor port, usually 6789
   monitor_port: 6789
