--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -317,14 +317,17 @@ ceph:
   # Monitor port, usually 6789
   monitor_port: 6789
 
+  # Monitor host(s), enable only you want to use hosts other than the coordinators
+  #monitor_hosts:
+  #  - pvchv1
+  #  - pvchv2
+  #  - pvchv3
+
   # Storage secret UUID, generated during Ansible cluster bootstrap
   secret_uuid: ""
 
 # API configuration
 api:
-
-  # Secret key for API cookies (long and secure password or UUID)
-  secret_key: "1234567890abcdefghijklmnopqrstuvwxyz"
 
   # API listening configuration
   listen:
@@ -340,6 +343,9 @@ api:
   
     # Enable or disable authentication
     enabled: yes
+
+    # Secret key for API cookies (long and secure password or UUID)
+    secret_key: "1234567890abcdefghijklmnopqrstuvwxyz"
 
     # Authentication source (token, others in future)
     source: token
