Fix node entry keys

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -205,7 +205,9 @@ timer:
 # Fencing configuration
 fencing:
 
-  # Disable fencing or not on IPMI failure at startup for remainder of daemon run
+  # Disable fencing or not on IPMI failure at startup
+  # Setting this value to "no" will allow fencing to be enabled even if does not respond during node daemon
+  # startup. This will allow future fencing to be attempted if it later recovers.
   disable_on_ipmi_failure: no
 
   # Fencing intervals
