Readd missing subsystem configurations

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -28,6 +28,26 @@ path:
   # Ceph configuration directory (set by Ceph/Ansible)
   ceph_directory: "/etc/ceph"
 
+# Subsystem configuration
+# Changing these values can be used to turn on or off various parts of PVC
+# Normally, all should be enabled ("yes") except in very custom clusters
+subsystem:
+
+    # Enable or disable hypervisor functionality
+    enable_hypervisor: yes
+
+    # Enable or disable virtual networking and routing functionality
+    enable_networking: yes
+
+    # Enable or disable Ceph storage management functionality
+    enable_storage: yes
+
+    # Enable or disable the worker client
+    enable_worker: yes
+
+    # Enable or disable the API client, if installed, when node is Primary
+    enable_api: yes
+
 # Cluster configuration
 cluster:
 
