Allow specifying static IPs instead of a file

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -9,10 +9,6 @@
 # Paths configuration
 path:
 
-  # Node Static IP file
-  # Contains the last octet IP address of this node for use if node_ip_selection is "static" for any network
-  node_ip_file: "/etc/pvc/ipaddr"
-
   # Plugin directory
   plugin_directory: "/usr/share/pvc/plugins"
 
@@ -96,7 +92,7 @@ cluster:
         # Upstream/default gateway address
         gateway_address: 10.0.0.254
 
-      # Node IP selection mechanism (either by-id or static; static requires additional configuration)
+      # Node IP selection mechanism (either "by-id", or a static IP, no netmask, in the above network)
       node_ip_selection: by-id
 
     # Cluster network, used for inter-node communication (VM- and Network-layer), unrouted
@@ -123,7 +119,7 @@ cluster:
         # Floating address
         floating_address: 10.0.1.250
 
-      # Node IP selection mechanism (either by-id or static; static requires additional configuration)
+      # Node IP selection mechanism (either "by-id", or a static IP, no netmask, in the above network)
       node_ip_selection: by-id
 
     # Storage network, used for inter-node communication (Storage-layer), unrouted
@@ -150,7 +146,7 @@ cluster:
         # Floating address
         floating_address: 10.0.2.250
 
-      # Node IP selection mechanism (either by-id or static; static requires additional configuration)
+      # Node IP selection mechanism (either "by-id", or a static IP, no netmask, in the above network)
       node_ip_selection: by-id
 
 # Database configuration
