Allow similar for IPMI hostnames

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -247,8 +247,8 @@ fencing:
   # IPMI details
   ipmi:
 
-    # Hostname format, using a "{node_id}" entry
-    hostname_format: "pvchv{node_id}-lom.mydomain.tld"
+    # Hostname format; use a "{node_id}" entry for a template, or a literal hostname
+    hostname: "pvchv{node_id}-lom.mydomain.tld"
 
     # IPMI username
     username: admin
