Update description of example conf

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -290,7 +290,7 @@ logging:
   # Enable or disable cluster detail logging during keepalive events
   log_cluster_details: yes
 
-  # Enable or disable monitoring detail logging during keepalive events
+  # Enable or disable monitoring detail logging during healthcheck events
   log_monitoring_details: yes
 
   # Number of VM console log lines to store in Zookeeper (per VM)
